--- a/styles.css
+++ b/styles.css
@@ -284,6 +284,7 @@ background: linear-gradient(to bottom, #636FA4, #E8CBC0); /* W3C, IE 10+/ Edge, 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 
@@ -372,9 +373,14 @@ background: linear-gradient(to bottom, #636FA4, #E8CBC0); /* W3C, IE 10+/ Edge, 
   color: white;
 }
 
-
+.container-cat{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  padding: 0px 30px 30px;
+  box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.50);
+}
 .caja{
-  margin: 40px;
+  margin: 35px;
 }
   .caja img{
     max-width: 320px;
@@ -388,13 +394,21 @@ background: linear-gradient(to bottom, #636FA4, #E8CBC0); /* W3C, IE 10+/ Edge, 
     font-weight: bold;
     color: white;
     text-shadow: 1px 1px #4B0082;
-
   }
   .caja span{
     color: lightgreen;
     text-shadow: 1px 1px black;
   }
-
+  .content-img {
+    position: relative;
+    inset: 0;
+    padding: 6px;
+    background: rgb(27, 27, 27, .5);
+    color: lightgreen;
+    font-weight: bold;
+    border-radius: 20px;
+    text-align: center;
+  }
 
 
 /*...*/
@@ -458,10 +472,11 @@ div.fg{
   font-weight: bold;
   font-size: 15px;
   border-style: inset;
-  text-shadow: 1px 1px lightblue;
-  color: gold;
+  text-shadow: 2px 1px black;
+  color: lightgreen;
   margin-top:20px;
-
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
 }
   .ultimas-publicaciones ul{
     border-radius: 120px;
@@ -541,9 +556,11 @@ footer{
 
 .container{
   max-width: 124rem;
-  padding: 0 1rem;
   margin: 0 auto;
+  box-shadow: 0px 0px 35px  rgba(0, 0, 0, 0.50);
+  background-color: rgba(0, 0, 0, 0.50);
 }
+
 
 .text-center{
   text-align: center;
@@ -717,19 +734,4 @@ footer{
 
 .tranding-slider-control .swiper-pagination .swiper-pagination-active{
   background: var(--primary);
-}
-
-
-#tranding{
-  background: #6190E8;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #A7BFE8, #6190E8);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #A7BFE8, #6190E8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  /*
-  background-image:url(img/44.jpg);
-  background-size: 100% 100%;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  */
 }
